Added the bootstrap files

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="widt h=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   <title>Hello Flask</title>
 </head>
 <body>
   
-  <nav>
+  <nav class="navbar">
     <ul>
       <li><a href="{{ url_for('index') }}">Home</a></li>
       <li><a href="{{ url_for('about') }}">About</a></li>
       <li><a href="{{ url_for('contact') }}">Contact</a></li>
+      <li><a href="{{ url_for('careers') }}">Careers</a></li>
     </ul>
   </nav>
-
-  <h1>Home Page</h1>
+  
+  {% block content %}
+  {% endblock %}
 
 </body>
 </html>
