--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
       {% if loop.index % 2 != 0 %}
 
         <div class="col-md-7">
-          <h3>{{ loop.index }}. {{ member.name }}</h3>
+          <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
           <p>{{ member.description }}</p>
         </div>
 
@@ -35,7 +35,7 @@
         </div>
       
         <div class="col-md-7">
-          <h3>{{ loop.index }}. {{ member.name }}</h3>
+          <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
           <p>{{ member.description }}</p>
         </div>
 
